# annotation_parser

./: README.md  README.ru.md  pyproject.toml  run.py
src/annotation_parser/: __init__.py  api.py  cli.py  public_enums.py  shape.py  types.py
src/annotation_parser/adapters/: __init__.py  adapter_factory.py  adapter_registration.py  base_adapter.py  coco_adapter.py  labelme_adapter.py  voc_adapter.py
src/annotation_parser/api/: __init__.py  api.py  parser_api.py  saver_api.py  shapes_api.py
src/annotation_parser/core/: __init__.py  annotation_file.py  annotation_parser.py  annotation_saver.py
src/annotation_parser/models/: __init__.py  coco_models.py  labelme_model.py  voc_models.py
src/annotation_parser/utils/: geometry.py
tests/: conftest.py  test_api.py
tests/common/: common_adapter_contract.py  test_adapters_contract.py  test_public_enums.py
tests/common/adapters/: test_adapter_factory.py  test_adapter_registration.py  test_base_adapter.py
tests/common/api/: test_api.py  test_parser_api.py  test_saver_api.py  test_shapes_api.py
tests/common/core/: test_annotation_file.py  test_annotation_parser.py  test_annotation_saver.py
tests/common/utils/: test_geometry.py
tests/labelme/: labelme_test.json
tests/labelme/adapters/: test_labelme_adapter.py  test_labelme_adapter_factory.py  test_labelme_adapter_registration.py
tests/labelme/api/: test_labelme_api.py
tests/labelme/core/: test_labelme_annotation_file.py  test_labelme_annotation_parser.py  test_labelme_annotation_saver.py
tests/labelme/models/: test_labelme_model.py
