[project]
name = "annotation-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "migutin83",email = "migutin83@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "shapely (>=2.1.1,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

